fix topic links spacing

--- a/layout/app/home/homepage.module.scss
+++ b/layout/app/home/homepage.module.scss
@@ -81,7 +81,6 @@
             display: flex;
             justify-content: space-around;
             width: 100%;
-            max-width: 520px;
 
             >a {
                 position: relative;
